patches-dsl/tests/fixtures/errors/unknown_arrow.patches
# error: unknown_arrow — => is not a valid connection operator
patch {
    module osc : Osc { frequency: 440.0 }
    module out : AudioOut

    osc.sine => out.in_left
}
